# cqg-binance-market-data

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md  conanfile.txt  run.sh
.github/workflows/: ci.yaml
config/: config.json
src/: app.cpp  app.h  main.cpp
src/config/: Config.cpp  Config.hpp
src/core/: Aggregator.cpp  Aggregator.hpp
src/network/: TradeParser.cpp  TradeParser.hpp  WebSocketClient.cpp  WebSocketClient.hpp
src/storage/: FileWriter.cpp  FileWriter.hpp
tests/: AggregatorTests.cpp  CMakeLists.txt  ConfigTests.cpp  FileWriterTests.cpp  WebSocketClientTests.cpp  main_test.cpp
